--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -36,53 +36,59 @@ $rowHeight4: 1.2rem;
 $btnRadius: 0.08rem;
 
 @mixin bigButton() {
-  background: $mainColor;
-  border-radius: $btnRadius;
-  color: white;
-  text-align: center;
-  width: 5.8rem;
-  height: 0.86rem;
-  line-height: 0.86rem;
-  font-size: 0.34rem;
+    background: $mainColor;
+    border-radius: $btnRadius;
+    color: white;
+    text-align: center;
+    width: 5.8rem;
+    height: 0.86rem;
+    line-height: 0.86rem;
+    font-size: 0.34rem;
 }
 
 @mixin bgPosition($spriteWidth, $spriteHeight, $iconWidth, $iconHeight, $iconX, $iconY) {
-  background-position: (($iconX / ($spriteWidth - $iconWidth)) * 100% ($iconY / ($spriteHeight - $iconHeight)) * 100%);
+    background-position: (($iconX / ($spriteWidth - $iconWidth)) * 100% ($iconY / ($spriteHeight - $iconHeight)) * 100%);
 }
 
 @mixin box-shadow($shadow) {
-  -webkit-box-shadow: $shadow;
-  -moz-box-shadow: $shadow;
-  box-shadow: $shadow;
+    -webkit-box-shadow: $shadow;
+    -moz-box-shadow: $shadow;
+    box-shadow: $shadow;
 }
 
 @mixin split-line() {
-  content: '';
-  height: 1px;
-  width: 100%;
-  background-color: $lineColor;
-  display: block;
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
+    content: '';
+    height: 1px;
+    width: 100%;
+    background-color: $lineColor;
+    display: block;
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
 }
 
 @mixin split-line-v() {
-  content: '';
-  height: 100%;
-  width: 1px;
-  background-color: $lineColor;
-  display: block;
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
+    content: '';
+    height: 100%;
+    width: 1px;
+    background-color: $lineColor;
+    display: block;
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
 }
 
+@mixin border-top-line() {
+    border-top: solid 1px $lineColor;
+}
+@mixin border-bottom-line() {
+    border-bottom: solid 1px $lineColor;
+}
 
 //path
 $imgPath: 'http://on7hxaasw.bkt.clouddn.com/';
 
 @mixin getBackground($src) {
-  $src: $imgPath+$src;
-  background: transparent url($src) 0 0 no-repeat;
+    $src: $imgPath+$src;
+    background: transparent url($src) 0 0 no-repeat;
 }
 
 
