--- a/src/views/personal/address/Address.scss
+++ b/src/views/personal/address/Address.scss
@@ -10,10 +10,10 @@
         background: white;
         width: 100%;
         position: relative;
-        margin-top: 0.2rem;
         color: #666;
 
         .info {
+            padding: 0.1rem;
             .user-name {
                 color: #333;
                 font-weight: 700;
